[tool.poetry]
name = "home-link"
version = "0.1.0"
description = ""
authors = ["gab25 <gabrielesorci.25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
prometheus-client = "^0.19.0"
aioshelly = "^8.0.1"

[tool.poetry.scripts]
home-link = "home_link.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
