[tool.poetry]
name = "home-link"
version = "0.1.0"
description = ""
authors = ["gab25 <gabrielesorci.25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pydantic = "^2.5.3"
aioshelly = "^8.0.1"
toml = "^0.10.2"
firebase-admin = "^6.4.0"

[tool.poetry.scripts]
home-link = "home_link.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
